# tanny-travels

client/: next.config.mjs  package-lock.json  package.json
client/app/: layout.js  page.js  page.jsx
client/app/Assets/: tripplanner.avif
client/app/Fligts/: page.jsx
client/app/Homepage/: page.jsx
client/app/Iterate/[tripId]/: page.jsx
client/app/Profile/: page.jsx
client/app/RecommendedTour/: page.jsx
client/components/: Flights.jsx  Hotels.jsx  Navbar.jsx  Tour.jsx
client/components/ui/: Combobox.jsx
client/public/: Google.jsx  finalResponse.json  personrunning.jsx  travelcard.jsx
fastapi/: .env.default  pyproject.toml
fastapi/src/: config.py  main.py
fastapi/src/api/endpoints/: health.py  suggestion.py  travel.py
fastapi/src/core/: settings.py
fastapi/src/schemas/: travel.py
fastapi/src/services/: ai_service.py  attraction_service.py
server/: index.js  package-lock.json  package.json
server/controllers/: iterateController.js
server/database/: connection.js
server/models/: tripModel.js
server/routes/: iterateRoute.js
server/utils/: createChatSession.js  getAttractions.js  getFlight.js  getHotel.js  queryOd.js  requestModel.js
